<resources>
    <string name="app_name">Muc Tim Online</string>

<string name="mto">Mực Tím </string>

<string name ="dangnhap">Tên đăng nhập</string>
    <string name ="pwd">Mật khẩu</string>
    <string name="nameUser">Tên người dùng......</string>
    <string name="btnSubmit">Đăng Nhập</string>
    <string name="btnRes">Đăng Ký</string>
    <string name="btnExit">Thoát</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_personal">personal</string>
    <string name="titleRegist"> Hãy tham gia cộng đồng teen Mực Tím</string>
    <string name="dk">Đăng ký</string>
<string name="success">Chúc mừng bạn đã đăng ký thành công. Vui lòng nhấn vào đây để bắt đầu với Mực Tím Online</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_register_success">register_success</string>
    <string name="title_activity_home">Home</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
<string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
