<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sv11130072.mto.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLogin"
                style="@android:style/TextAppearance.Holo.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/mto"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffba15ff"
                android:textIsSelectable="false"
                android:textSize="50dp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/linearLayout"
                android:layout_toRightOf="@+id/linearLayout"
                android:text="o"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffff30a3"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="n"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffff2134"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="l"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffb335"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="i"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#fffdff13"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="n"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ff9fff23"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="e"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ff23ff19"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="25dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editAccount"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style"
                android:ems="10"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:text="Tên đăng nhập"
                android:textColor="#ffa813ff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="25dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style"
                android:ems="10"
                android:gravity="center"
                android:inputType="textVisiblePassword|text"
                android:password="false"
                android:text="Mật khẩu"
                android:textColor="#ffa813ff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                style="@style/btnStyleViolet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_btn_violet"
                android:text="@string/btnSubmit" />

            <Button
                android:id="@+id/button2"
                style="@style/btnStyleViolet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_btn_violet"
                android:text="@string/btnRes" />

            <Button
                android:id="@+id/button3"
                style="@style/btnStyleViolet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_btn_violet"
                android:text="@string/btnExit" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
